fix z-index issues with favourite icons

--- a/public/js/views/menu/room/favourite-collection/favourite-collection-item-view.less
+++ b/public/js/views/menu/room/favourite-collection/favourite-collection-item-view.less
@@ -16,7 +16,7 @@
     width:       @start-icon-height;
     font-family: fontello;
     color:       @search-message-decal-color;
-    z-index:     -1;
+    z-index:     0;
     transition: left 0.3s ease-out;
   }
 
