--- a/public/js/views/menu/room/primary-collection/primary-collection-item-view.less
+++ b/public/js/views/menu/room/primary-collection/primary-collection-item-view.less
@@ -37,6 +37,7 @@ JP 11/2/16
   flex-direction:  row;
   align-items:     center;
   padding-right:   (@desktop-menu-left-padding / 2);
+  padding-left:   (@desktop-menu-left-padding / 2);
   transition:      background-color .2s ease-out;
 
   .room-item.active & {
@@ -72,6 +73,7 @@ JP 11/2/16
 .room-item__avatar {
   .room-menu-avatar();
   margin-left:  @desktop-menu-left-padding / 2;
+  z-index: 2;
 }
 
 .room-item__avatar--show-more {
